@@ -3,6 +3,7 @@ Version 5.9.23
 - Fixed .lbl+n expressions in inline assembly
 - Fixed Spin2 loops so that the correct value is in the variable if the loop is quit
 - Fixed Nucode evaluation of some bit operations
+- Fixed a crash when duplicate names declared in anonymous structs
 - Made sure all registers involved in a large data structure are allocated if any of them are used
 
 Version 5.9.22
